--- a/Notebooks/RAG Implementation.ipynb
+++ b/Notebooks/RAG Implementation.ipynb
@@ -1206,8 +1206,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "74c03d70-bd44-4beb-be7f-610e5210aeee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b13825b4-2ccc-4f15-b35b-41f4cca71da7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "openai.api_key = os.environ['OPENAI_API_KEY']\n",
+    "\n",
+    "CHROMA_PATH = \"chroma\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0667cf28-f88f-417b-a66f-8268f10ee102",
    "metadata": {},
    "outputs": [],
    "source": []
